[tool.poetry]
name = "cognito-csv-exporter"
version = "0.1.0"
description = "Script for exporting AWS Cognito User Pool records into csv file"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.24.81"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
